Add my personal information

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -31,7 +31,7 @@
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 \colorlet{awesome}{awesome-red}
 % Uncomment if you would like to specify your own color
-% \definecolor{awesome}{HTML}{CA63A8}
+\definecolor{awesome}{HTML}{636363}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
@@ -51,22 +51,22 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
-\name{Claud D.}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\name{Georgiy}{Syunyaev}
+\position{PhD Candidate {\enskip\cdotp\enskip} Political Science}
+\address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
 
-\mobile{(+82) 10-9030-1843} 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{+1 (917) 873-68-72}
+\email{gsyunyaev@columbia.edu}
+\homepage{polisci.columbia.edu/people/profile/1502}
+\github{gerasy1987}
+\linkedin{georgiy-syunyaev}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
-% \skype{skype-id}
+\skype{gerasy1}
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Must be the change that you want to see in the world."}
+% \quote{``Must be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -79,7 +79,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Georgiy Syunyaev~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
@@ -88,12 +88,12 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{cv/education.tex}
+\input{cv/writing.tex}
+\input{cv/presentation.tex}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
 \input{cv/extracurricular.tex}
 \input{cv/honors.tex}
-\input{cv/presentation.tex}
-\input{cv/writing.tex}
 \input{cv/committees.tex}
 
 
