--- a/examples/cv/presentation.tex
+++ b/examples/cv/presentation.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Presentation}
+\cvsection{Conferences}
 
 
 %-------------------------------------------------------------------------------
@@ -11,25 +11,34 @@
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <DEFCON 20th : The way to go to Las Vegas>} % Role
-    {6th CodeEngn (Reverse Engineering Conference)} % Event
-    {Seoul, S.Korea} % Location
-    {Jul. 2012} % Date(s)
+    {Authors: G.~Syunyaev, L.~Polishchuk} % Authors
+    {Taming the (not so) Stationary Bandit: Turnover of Ruling Elites and Protection of Property Rights} % Project
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced CTF(Capture the Flag) hacking competition and advanced techniques and strategy for CTF}
+        \item {\textbf{SCW 2014}: The 12th Meeting of the Society for Social Choice and Welfare, Boston, USA, June~18--21, 2014}
+        \item {\textbf{EEA-ESEM 2012}: European Economic Association and the Econometric Society European meeting, Malaga, Spain, August~27--31, 2012}
+        \item {\textbf{PET 2012}: 13th Annual Conference of The Association of Public Economic Theory, Taipei, Taiwan, June~12--14, 2012}
+        \item {\textbf{ESNIE 2012}: 11th session of the European School on New Institutional Economics (ESNIE), Cargese, France, May~21--25, 2012}
+        \item {\textbf{RSSIA 2011}: Russian Summer School for Institutional Aanalysis, Moscow, Russian Federation, July~5--11, 2011}
+        \item {\textbf{ISNIE 2011}: 15th Annual Conference of The International Society for New Institutional Economics, Stanford, USA, June~16--18, 2011}
+        \item {\textbf{RCI 2010}: Shanghai Workshop on Institutional Analysis, Shanghai, China, December~12--18, 2010}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Presenter for <Metasploit 101>} % Role
-    {6th Hacking Camp - S.Korea} % Event
-    {S.Korea} % Location
-    {Sep. 2012} % Date(s)
+    {Authors: G.~Syunyaev, L.~Polishchuk} % Authors
+    {Turnover of Ruling Elites and Property Rights Protection: Evidence from Russian Regions} % Project
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced basic procedure for penetration testing and how to use Metasploit}
+        \item {\textbf{EACES-HSE 2014}: Political Economy of Development: A Comparative Perspective, Pushkin, Russian Federation, May~29--31, 2014}
+        \item {\textbf{RSSIA 2013}: Russian Summer School for Institutional Aanalysis, Moscow, Russian Federation, June~29 -- July~5, 2013}
+        \item {\textbf{IACESD 2012}: XIII April International Academic Conference on Economic and Social Development, Moscow, Russian Federation, April~3--5, 2012}
+        \item {\textbf{IACESD 2011}: XII April International Academic Conference on Economic and Social Development, Moscow, Russian Federation, April~5--7, 2011}
       \end{cvitems}
     }
 
