--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -10,19 +10,28 @@
 \begin{cvskills}
 
 %---------------------------------------------------------
-  \cvskill
-    {Programming} % Category
-    {Python, C/C++, Scala, JAVA, Node.JS, OCaml, LaTeX} % Skills
+\cvskill
+    {Substantive Topics} % Category
+    {Comparative Politics, Political Economy, Institutional Economics, Authoritarian Regimes}
+
+\cvskill
+    {Methodological Topics} % Category
+    {Formal Political Economy, Experimental Research, Causal Inferece}
 
 %---------------------------------------------------------
   \cvskill
-    {Web} % Category
-    {Django with Python, Express with Node.JS, HTML5, LESS} % Skills
+    {Software} % Category
+    {\texttt{[R]}, Stan, Python, Mathematica, MATLAB, Stata, \LaTeX, MS Office} % Skills
+
+%---------------------------------------------------------
+  % \cvskill
+  %   {Web} % Category
+  %   {Django with Python, Express with Node.JS, HTML5, LESS} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese, Chinese} % Skills
+    {Russian, English, German} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
