--- a/examples/cv/writing.tex
+++ b/examples/cv/writing.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Writing}
+\cvsection{Publications}
 
 
 %-------------------------------------------------------------------------------
@@ -11,25 +11,49 @@
 
 %---------------------------------------------------------
   \cventry
-    {Founder \& Writer} % Role
-    {A Guide for Developers in Start-up} % Title
-    {Facebook Page} % Location
-    {Jan. 2015 - PRESENT} % Date(s)
+    {G.~Syunyaev, L.~Polishchuk} % Role
+    {Investment Climate and Turnover of Power in Russian Regions} % Title
+    {Voprosy Ekonomiki \emph{(in Russian)}} % Location
+    {Vol. 2, pp. 88--117, 2014} % Date(s)
     {
-      \begin{cvitems} % Description(s)
-        \item {Drafted daily news for developers in Korea about IT technologies, issues about start-up.}
-      \end{cvitems}
+      % \begin{cvitems} % Description(s)
+      %   \item {Drafted daily news for developers in Korea about IT technologies, issues about start-up.}
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Undergraduate Student Reporter} % Role
-    {AhnLab} % Title
-    {S.Korea} % Location
-    {Oct. 2012 - Jul. 2013} % Date(s)
+    {L.~Polishchuk, G.~Syunyaev} % Role
+    {Ruling Elites' Rotation and Asset Ownership: Implications for Property Rights} % Title
+    {Public Choice} % Location
+    {Vol. 162(1), pp. 159--182, 2015} % Date(s)
+    {
+      % \begin{cvitems} % Description(s)
+      %   \item {Drafted daily news for developers in Korea about IT technologies, issues about start-up.}
+      % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {L.~Polishchuk, A.~Baranov, E.~Malkov, M.~Rochlitz, G.~Syunyaev} % Role
+    {Measuring Institutional Quality Across Russian Regions} % Title
+    {Voprosy Ekonomiki \emph{(in Russian)}} % Location
+    {Vol. 2, pp. 69--103, 2015} % Date(s)
+    {
+      % \begin{cvitems} % Description(s)
+      %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+      % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {L.~Polishchuk, G.~Syunyaev} % Role
+    {Property Rights without Democracy: The Role of Elites' Rotation and Asset Ownership} % Title
+    {Book Chapter} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        \item {In \emph{C. Dahlstrom et al. (eds.), Elites, Institutions and the Quality of Government, Palgrave Macmillan, 2015}}
       \end{cvitems}
     }
 
