--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,14 +11,14 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
+    {PhD in Political Science} % Degree
+    {\href{http://polisci.columbia.edu/}{Columbia University in the City of New York}} % Institution
+    {New York, NY, US} % Location
+    {Sep. 2014 - PRESENT} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
