--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -10,16 +10,52 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
+\cventry
+    {Doctor of Philosophy} % Degree
+    {\href{http://polisci.columbia.edu/}{Political Science Department}, \href{http://www.columbia.edu/}{Columbia University}} % Institution
+    {New York, NY, United States} % Location
+    {Sep. 2014 - PRESENT} % Date(s)
+    {
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \end{cvitems}
+    }
+
+\cventry
+    {Candidate of Sciences} % Degree
+    {\href{http://isc.hse.ru/about_eng}{LAAISC (CInSt)}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
+    {Moscow, Russian Federation} % Location
+    {Nov. 2011 - Nov. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Thesis Topic: \emph{Taming the (not so) Stationary Bandit: Property Rights and Political Competition in Non-democratic Setting}}
+        \item {Candidacy Program: \emph{Theoretical Economics}}
+        \item {Advisor: \href{http://www.hse.ru/en/org/persons/65104}{Professor Leonid I.~Polishchuk}}
       \end{cvitems}
     }
 
+\cventry
+    {Master of Economics} % Degree
+    {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
+    {Moscow, Russian Federation} % Location
+    {Sep. 2009 - Jul. 2011} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Thesis Topic: \emph{Property Rights and Political Competition: Economic Analysis}}
+        \item {Area of Study: \emph{Political Economy}, \emph{Endogenous Property Rights}, \emph{Institutional Economics}}
+        \item {Advisor: \href{http://www.hse.ru/en/org/persons/65104}{Professor Leonid I.~Polishchuk}}
+      \end{cvitems}
+    }
+
+\cventry
+    {Bachelor of Economics} % Degree
+    {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
+    {Moscow, Russian Federation} % Location
+    {Sep. 2005 - Jul. 2009} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Concentration: \emph{Risk-management} (with emphasis on stochastic methods of actuarial analysis)}
+      \end{cvitems}
+    }
 %---------------------------------------------------------
 \end{cventries}
