--- a/examples/cv/conferences.tex
+++ b/examples/cv/conferences.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {Authors: G.~Syunyaev, L.~Polishchuk} % Authors
-    {Taming the (not so) Stationary Bandit: Turnover of Ruling Elites and Protection of Property Rights} % Project
+    {Ruling Elites' Rotation and Asset Ownership: Implications for Property Rights} % Project
     {} % Location
     {} % Date(s)
     {
