--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -13,18 +13,18 @@
 \cventry
     {Doctor of Philosophy} % Degree
     {\href{http://polisci.columbia.edu/}{Political Science Department}, \href{http://www.columbia.edu/}{Columbia University}} % Institution
-    {New York, NY, United States} % Location
+    {New York, NY, US} % Location
     {Sep. 2014 - PRESENT} % Date(s)
     {
-      % \begin{cvitems} % Description(s) bullet points
-      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      % \end{cvitems}
+      \begin{cvitems} % Description(s) bullet points
+        \item {Major: \emph{Comparative Politics}}
+      \end{cvitems}
     }
 
 \cventry
     {Candidate of Sciences} % Degree
     {\href{http://isc.hse.ru/about_eng}{LAAISC (CInSt)}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
-    {Moscow, Russian Federation} % Location
+    {Moscow, Russia} % Location
     {Nov. 2011 - Nov. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
@@ -37,7 +37,7 @@
 \cventry
     {Master of Economics} % Degree
     {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
-    {Moscow, Russian Federation} % Location
+    {Moscow, Russia} % Location
     {Sep. 2009 - Jul. 2011} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
@@ -50,7 +50,7 @@
 \cventry
     {Bachelor of Economics} % Degree
     {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
-    {Moscow, Russian Federation} % Location
+    {Moscow, Russia} % Location
     {Sep. 2005 - Jul. 2009} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
