--- a/examples/cv/publications.tex
+++ b/examples/cv/publications.tex
@@ -3,7 +3,7 @@
 %-------------------------------------------------------------------------------
 \cvsection{Publications}
 
-
+\cvsubsection{Refereed}
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {G.~Syunyaev, L.~Polishchuk} % Role
-    {Investment Climate and Turnover of Power in Russian Regions} % Title
+    {\href{https://ideas.repec.org/a/nos/voprec/2014-02-5.html}{Investment Climate and Turnover of Power in Russian Regions}} % Title
     {Voprosy Ekonomiki \emph{(in Russian)}} % Location
     {Vol. 2, pp. 88--117, 2014} % Date(s)
     {
@@ -24,7 +24,7 @@
 %---------------------------------------------------------
   \cventry
     {L.~Polishchuk, G.~Syunyaev} % Role
-    {Ruling Elites' Rotation and Asset Ownership: Implications for Property Rights} % Title
+    {\href{http://dx.doi.org/10.1007/s11127-014-0210-2}{Ruling Elites' Rotation and Asset Ownership: Implications for Property Rights}} % Title
     {Public Choice} % Location
     {Vol. 162(1), pp. 159--182, 2015} % Date(s)
     {
@@ -36,9 +36,9 @@
 %---------------------------------------------------------
   \cventry
     {L.~Polishchuk, A.~Baranov, E.~Malkov, M.~Rochlitz, G.~Syunyaev} % Role
-    {Measuring Institutional Quality Across Russian Regions} % Title
-    {Voprosy Ekonomiki \emph{(in Russian)}} % Location
-    {Vol. 2, pp. 69--103, 2015} % Date(s)
+    {\href{http://dx.doi.org/10.1016/j.ruje.2015.11.005}{How (not) to Measure Russian Regional Institutions}} % Title
+    {Russian Journal of Economics} % Location
+    {Vol. 1(2), pp. 154--181, 2015} % Date(s)
     {
       % \begin{cvitems} % Description(s)
       %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
@@ -48,13 +48,36 @@
 %---------------------------------------------------------
   \cventry
     {L.~Polishchuk, G.~Syunyaev} % Role
-    {Property Rights without Democracy: The Role of Elites' Rotation and Asset Ownership} % Title
+    {\href{http://dx.doi.org/10.1057/9781137556288.0018}{Property Rights without Democracy: The Role of Elites' Rotation and Asset Ownership}} % Title
     {Book Chapter} % Location
     {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {In \emph{C. Dahlstrom et al. (eds.), Elites, Institutions and the Quality of Government, Palgrave Macmillan, 2015}}
+        \item {In \emph{C. Dahlstrom et al. (eds.), Elites, Institutions and the Quality of Government, Palgrave Macmillan UK, 2015}}
       \end{cvitems}
+    }
+
+%---------------------------------------------------------
+\end{cventries}
+
+
+
+\cvsubsection{Non-Refereed}
+%-------------------------------------------------------------------------------
+%   CONTENT
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {R.~Menyashev, T.~Natkhov, L.~Polishchuk, G.~Syunyaev} % Role
+    {\href{https://www.hse.ru/pubs/share/direct/document/59731518}{New Institutional Economics: A State-of-the-Art Review for Economic Sociologists}} % Title
+    {Economic Sociology \emph{(Electronic)}} % Location
+    {Vol. 13(1), pp. 12--21, 2011} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
     }
 
 %---------------------------------------------------------
