--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,17 +11,23 @@
 
 %---------------------------------------------------------
 \cvskill
-    {Substantive Topics} % Category
+    {Substantive} % Category
     {Comparative Politics, Political Economy, Institutional Economics, Authoritarian Regimes}
 
+%---------------------------------------------------------
 \cvskill
-    {Methodological Topics} % Category
-    {Formal Political Economy, Experimental Research, Causal Inferece}
+    {Methodology} % Category
+    {Formal Political Economy, Experimental Research, Bayesian Statistics, Causal Inferece}
 
 %---------------------------------------------------------
-  \cvskill
+\cvskill
+    {Mathematics} % Category
+    {Game Theory, Graph Theory, Stochastic Calculus, Networks, Differential Equations, Mathematical Analysis}
+
+%---------------------------------------------------------
+\cvskill
     {Software} % Category
-    {\texttt{[R]}, Stan, Python, Mathematica, MATLAB, Stata, \LaTeX, MS Office} % Skills
+    {\texttt{[R]}, Stan, Stata SE/ME, MATLAB, Python, Mathematica, \LaTeX, MS Office} % Skills
 
 %---------------------------------------------------------
   % \cvskill
@@ -31,7 +37,7 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Russian, English, German} % Skills
+    {Russian \emph{(native)}, English \emph{(fluent)}, German \emph{(basic)}} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
