Update to personal version

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -56,7 +56,7 @@
 %-------------------------------------------------------------------------------
 \name{Georgiy}{Syunyaev}
 
-\position{PhD Candidate {\enskip\cdotp\enskip} Political Science}
+\position{\vspace{0.2cm} PhD Candidate {\enskip\cdotp\enskip} Political Science}
 \address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
 
 \mobile{+1 (917) 873-68-72}
