--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -29,9 +29,9 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+% \colorlet{awesome}{awesome-red}
 % Uncomment if you would like to specify your own color
-% \definecolor{awesome}{HTML}{CA63A8}
+\definecolor{awesome}{HTML}{034E7B}
 
 % Colors for text
 % Uncomment if you would like to specify your own color
@@ -51,23 +51,23 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
-\name{Claud D.}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\name{Georgiy}{Syunyaev}
 
-\mobile{(+82) 10-9030-1843} 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\position{\vspace{0.2cm} PhD Candidate {\enskip\cdotp\enskip} Political Science}
+\address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
+
+\mobile{+1 (917) 873-68-72}
+\email{gsyunyaev@columbia.edu}
+\homepage{polisci.columbia.edu/people/profile/1502}
+\github{gerasy1987}
+\linkedin{georgiy-syunyaev}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
-% \skype{skype-id}
+\skype{gerasy1}
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Must be the change that you want to see in the world."}
-
+% \quote{``In theory, there is no difference between theory and practice. But, in practice, there is.''\\ Jan L. A. van de Snepscheut}
 
 %-------------------------------------------------------------------------------
 \begin{document}
@@ -79,7 +79,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Résumé}
+  {Georgiy Syunyaev~~~·~~~Résumé}
   {\thepage}
 
 
@@ -87,14 +87,16 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-% \input{resume/summary.tex}
+\input{resume/summary.tex}
 \input{resume/education.tex}
-\input{resume/experience.tex}
-\input{resume/extracurricular.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
+\input{resume/publications.tex}
+\input{resume/conferences.tex}
+\input{resume/skills.tex}
+\input{resume/appointments.tex}
+\input{resume/grants.tex}
+\input{resume/referee_service.tex}
+\input{resume/teaching.tex}
+\input{resume/personal.tex}
 
 
 %-------------------------------------------------------------------------------
