--- a/examples/resume/personal.tex
+++ b/examples/resume/personal.tex
@@ -1,27 +1,23 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Program Committees}
+\cvsection{Personal Information}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvhonors}
+\begin{cvskills}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Organizer \& Co-director} % Position
-    {1st POSTECH Hackathon} % Committee
-    {S.Korea} % Location
-    {2013} % Date(s)
+\cvskill
+    {Nationality} % Category
+    {Russian}
 
 %---------------------------------------------------------
-  \cvhonor
-    {Staff \& Problem Writer} % Position
-    {JFF(Just for Fun) Hacking Competition} % Committee
-    {S.Korea} % Location
-    {2012} % Date(s)
+\cvskill
+    {Marital Status} % Category
+    {Single}
 
 %---------------------------------------------------------
-\end{cvhonors}
+\end{cvskills}
