Update CV for j-pal application (emphasis on software and reproducible research)

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -56,7 +56,7 @@
 %-------------------------------------------------------------------------------
 \name{Georgiy}{Syunyaev}
 
-\position{\vspace{0.2cm} PhD Candidate {\enskip\cdotp\enskip} Political Science}
+\position{\vspace{0.2cm} PhD Student {\enskip\cdotp\enskip} Political Science}
 \address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
 
 \mobile{+1 (917) 873-68-72}
@@ -91,15 +91,16 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
-\input{cv/publications.tex}
-\input{cv/conferences.tex}
-\input{cv/skills.tex}
-\input{cv/appointments.tex}
-\input{cv/grants.tex}
-\input{cv/referee_service.tex}
-\input{cv/teaching.tex}
-\input{cv/personal.tex}
+\input{cv/01_education.tex}
+\input{cv/02_publications.tex}
+\input{cv/03_skills.tex}
+\input{cv/04_software.tex}
+\input{cv/05_appointments.tex}
+\input{cv/06_grants.tex}
+\input{cv/07_teaching.tex}
+\input{cv/08_conferences.tex}
+\input{cv/09_referee_service.tex}
+\input{cv/10_personal.tex}
 
 
 
