--- a/examples/cv/01_education.tex
+++ b/examples/cv/01_education.tex
@@ -18,11 +18,12 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Major: \emph{Comparative Politics}}
+        \item {Minor: \emph{Political Economy}}
       \end{cvitems}
     }
 
 \cventry
-    {Candidate of Sciences} % Degree
+    {Candidate of Sciences (PhD Equivalent)} % Degree
     {\href{http://isc.hse.ru/about_eng}{LAAISC (CInSt)}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
     {Moscow, Russia} % Location
     {Nov. 2011 - Nov. 2014} % Date(s)
