--- a/examples/cv/02_publications.tex
+++ b/examples/cv/02_publications.tex
@@ -82,3 +82,24 @@
 
 %---------------------------------------------------------
 \end{cventries}
+
+\cvsubsection{Working Papers}
+%-------------------------------------------------------------------------------
+%   CONTENT
+%-------------------------------------------------------------------------------
+\begin{cventries}
+
+%---------------------------------------------------------
+  \cventry
+    {E.~Borisova, T.~Frye, G.~Syunyaev} % Role
+    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Title
+    {Draft} % Location
+    {2016} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
+\end{cventries}
