--- a/examples/cv/03_skills.tex
+++ b/examples/cv/03_skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
 \cvskill
     {Methodology} % Category
-    {Formal Political Economy, Experimental Research, Bayesian Statistics, Causal Inferece}
+    {Formal Political Economy, Experimental Research, Bayesian Statistics, Causal Inferece, Reproducible Research}
 
 %---------------------------------------------------------
 \cvskill
@@ -27,7 +27,7 @@
 %---------------------------------------------------------
 \cvskill
     {Software} % Category
-    {\texttt{[R]}, Stan, Stata SE/ME, MATLAB, Python, Mathematica, \LaTeX, MS Office} % Skills
+    {\texttt{[R]} \emph{(advanced)}, Stata SE/ME \emph{(advanced)}, MATLAB \emph{(intermediary)}, Mathematica \emph{(intermediary)}, \texttt{RStan} \emph{(intermediary)}, Python \emph{(basic)}, Julia \emph{(basic)}, \LaTeX{} \emph{(advanced)}, \texttt{R Markdown} \emph{(advanced)}, MS Office} % Skills
 
 %---------------------------------------------------------
   % \cvskill
