--- a/examples/cv/08_conferences.tex
+++ b/examples/cv/08_conferences.tex
@@ -43,4 +43,17 @@
     }
 
 %---------------------------------------------------------
+  \cventry
+    {Authors: E.~Borisova, T.~Frye, G.~Syunyaev} % Authors
+    {Encouraging Collective Action in Homeowners Associations: Evidence from Russia} % Project
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {\textbf{SSDS 2016}: Seminar for the Study of Development Strategies (Internal Weeks), New York, USA, April, 2016}
+        \item {\textbf{APSA 2016}: American Political Science Association Annual Meeting, Philadelphia, USA, September~1--4, 2016}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
 \end{cventries}
