Edit softawre development section

--- a/examples/cv/04_software.tex
+++ b/examples/cv/04_software.tex
@@ -21,7 +21,12 @@
 %---------------------------------------------------------
 \cvskill
     {\href{https://declaredesign.org/}{\texttt{DeclareDesign}}} % Package
-    {\emph{(Research Assistant during Summer 2016)} \texttt{[R]} package to aid researchers in characterizing and diagnosing research designs.} % Description
+    {\texttt{[R]} package to aid researchers in characterizing and diagnosing research designs (\href{https://declaredesign.org/paper.pdf}{Blair et al. 2016}).\newline\emph{(Research Assistant during Summer 2016)}} % Description
+
+%---------------------------------------------------------
+\cvskill
+    {\texttt{BIQQ}} % Package
+    {\texttt{[R]} package for Bayesian Integration of Qualitative and Quantitative Research (\href{https://www.cambridge.org/core/journals/american-political-science-review/article/mixing-methods-a-bayesian-approach/BB1DFC2FDA3D7F2224F3341042FEA5F4}{Humphreys, Jacobs 2015}).\newline\emph{(Research Assistant during Fall 2016)}} % Description
 
 
 %---------------------------------------------------------
