--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -60,7 +60,7 @@
 \address{527 West 121st Street, Apt. 42A, New York, NY, 10027, US}
 
 \mobile{+1 (917) 873-68-72}
-\email{gsyunyaev@columbia.edu}
+\email{g.syunyaev@columbia.edu}
 \homepage{polisci.columbia.edu/people/profile/1502}
 \github{gerasy1987}
 \linkedin{georgiy-syunyaev}
