--- a/examples/cv/01_education.tex
+++ b/examples/cv/01_education.tex
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
 \cventry
-    {Doctor of Philosophy} % Degree
+    {Doctor of Philosophy \newline Master of Philosophy \newline Master of Arts} % Degree
     {\href{http://polisci.columbia.edu/}{Political Science Department}, \href{http://www.columbia.edu/}{Columbia University}} % Institution
     {New York, NY, US} % Location
-    {Sep. 2014 - PRESENT} % Date(s)
+    {Sep. 2014 - PRESENT \newline Sep. 2014 - PRESENT \newline Sep. 2014 - Oct. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Major: \emph{Comparative Politics}}
@@ -36,27 +36,27 @@
     }
 
 \cventry
-    {Master of Economics} % Degree
+    {Master of Economics \newline Bachelor of Economics} % Degree
     {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
     {Moscow, Russia} % Location
-    {Sep. 2009 - Jul. 2011} % Date(s)
+    {Sep. 2009 - Jul. 2011 \newline Sep. 2005 - Jul. 2009} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Thesis Topic: \emph{Property Rights and Political Competition: Economic Analysis}}
+        \item {Master Thesis Topic: \emph{Property Rights and Political Competition: Economic Analysis}}
         \item {Area of Study: \emph{Political Economy}, \emph{Endogenous Property Rights}, \emph{Institutional Economics}}
         \item {Advisor: \href{http://www.hse.ru/en/org/persons/65104}{Professor Leonid I.~Polishchuk}}
       \end{cvitems}
     }
 
-\cventry
-    {Bachelor of Economics} % Degree
-    {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
-    {Moscow, Russia} % Location
-    {Sep. 2005 - Jul. 2009} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Concentration: \emph{Risk-management} (with emphasis on stochastic methods of actuarial analysis)}
-      \end{cvitems}
-    }
+% \cventry
+%     {Bachelor of Economics} % Degree
+%     {\href{http://economics.hse.ru/en/}{Department of Economics}, \href{http://www.hse.ru/en/}{NRU Higher School of Economics}} % Institution
+%     {Moscow, Russia} % Location
+%     {Sep. 2005 - Jul. 2009} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) bullet points
+%         \item {Concentration: \emph{Risk-management} (with emphasis on stochastic methods of actuarial analysis)}
+%       \end{cvitems}
+%     }
 %---------------------------------------------------------
 \end{cventries}
