edit personal website

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -61,7 +61,7 @@
 
 \mobile{+1 (917) 873-68-72}
 \email{g.syunyaev@columbia.edu}
-\homepage{polisci.columbia.edu/people/profile/1502}
+\homepage{gsyunyaev.com}
 \github{gerasy1987}
 \linkedin{georgiy-syunyaev}
 % \stackoverflow{SO-id}{SO-name}
