add grants and edit teaching

--- a/examples/cv/06_grants.tex
+++ b/examples/cv/06_grants.tex
@@ -17,10 +17,24 @@
 
 %---------------------------------------------------------
   \cvhonor
+    {Travel Grant of the Department of Political Science} % Award
+    {\href{http://polisci.columbia.edu/}{Department of Political Science, Columbia University}} % Event
+    {New York, NY, US} % Location
+    {2016} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
     {Dean's Fellowship} % Award
-    {\href{http://www.columbia.edu/}{Columbia University}} % Event
+    {\href{http://gsas.columbia.edu/content/fellowship-categories}{Graduate School of Arts and Sciences, Columbia University}} % Event
     {New York, NY, US} % Location
     {2014} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Research Grant of the Department of Economics} % Award
+    {\href{http://www.hse.ru/en/}{NRU HSE}} % Event
+    {Moscow, Russia} % Location
+    {2013} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
@@ -28,6 +42,13 @@
     {\href{http://www.hse.ru/en/}{NRU HSE}} % Event
     {Moscow, Russia} % Location
     {2011} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
+    {Travel Grants of NRU HSE for Participation in 5 Academic Conferences} % Award
+    {\href{http://www.hse.ru/en/}{NRU HSE}} % Event
+    {Moscow, Russia} % Location
+    {2010-2014} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
