--- a/examples/cv/07_teaching.tex
+++ b/examples/cv/07_teaching.tex
@@ -17,7 +17,7 @@
     {Spring 2016} % Semester
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Instructor: \href{http://www.stat.columbia.edu/~gelman/}{Andrew Gelman}}
+        \item {Instructor: \href{http://www.stat.columbia.edu/~gelman/}{Professor Andrew Gelman}}
         \item {Responsible for 2-hour bi-weekly sections}
         \item {Graded 40 homeworks per week}
       \end{cvitems}
@@ -31,6 +31,7 @@
     {Fall 2011, Fall 2013} % Semester
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Instructor: \href{https://www.hse.ru/en/org/persons/65104}{Professor Leonid I.~Polishchuk}}
         \item {Course taught to last year bachelor or master degree students}
         \item {Responsible for 2-hour seminar on Endogenous Constitutional Design}
         \item {Graded over 40 exams and class assignments}
@@ -45,6 +46,7 @@
     {Spring 2012} % Semester
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Instructor: \href{https://www.hse.ru/en/staff/yudkevich}{Professor Maria M.~Yudkevich}}
         \item {Course taught to 3rd year bachelor degree students}
         \item {Responsible for three 1-hour seminars each week}
         \item {Graded over 100 exams and class assignments}
@@ -61,6 +63,7 @@
     {Fall 2012} % Semester
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Instructor: \href{http://www.hse.ru/en/org/persons/65104}{Professor Leonid I.~Polishchuk}}
         \item {Course taught to the last year bachelor or master degree students}
         \item {Responsible for one 2-hour seminar each week}
         \item {Graded over 50 exam and class assignment papers}
