add WP with Tom

--- a/examples/cv/02_publications.tex
+++ b/examples/cv/02_publications.tex
@@ -102,4 +102,16 @@
     }
 
 %---------------------------------------------------------
+  \cventry
+    {T.~Leavitt, G.~Syunyaev} % Role
+    {An Exact, Distribution-Free Method for Addressing Attrition Bias in Randomized Experiments} % Title
+    {Draft} % Location
+    {2016} % Date(s)
+    {
+        % \begin{cvitems} % Description(s)
+        %   \item {Drafted reports about IT trends and Security issues on AhnLab Company magazine.}
+        % \end{cvitems}
+    }
+
+%---------------------------------------------------------
 \end{cventries}
